--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 	<!--HOME-->
 	<section id="home">
 		<p class="text-center">   Hey'll...</p>
-		<p class="text-center">   It'z <span>Saran</span></p>
-		<p class="text-center"><span>   Devoloper</span></p>
-		<p class="text-center"><span>   Hardware Engineer</span></p>
-		<p class="text-center"><span>   And Intern at Iamneo</span></p>
+		<p class="text-center">   It'z <span>Saran...</span></p>
+		<p class="text-center"><span>   Devoloper...</span></p>
+		<p class="text-center"><span>   Hardware Engineer...</span></p>
+		<p class="text-center"><span>   And Intern at Iamneo.</span></p>
 	</section>
 
 	<!-- HOME FINISHED -->
@@ -65,8 +65,8 @@
 			<div class="content">
 				<!-- <h1>..ABOUT ME..</h1>
  -->				<p>Hey'll...</p>
-				<p>✨ I'm currently pursuing my final year BE - Electronics and Communication Engineering at PSNA College of Engineering and Tecnology..</p>
-				<p>✨ Interested in Python, C & C++, Front End Development (HTML, CSS, Java Script) & MySQL..</p>
+				<p>🌟 I'm currently pursuing my final year BE - Electronics and Communication Engineering at PSNA College of Engineering and Tecnology..</p>
+				<p>🌟 Interested in Python, C & C++, Front End Development (HTML, CSS, Java Script) & MySQL..</p>
 			</div>
 		</div>
 	</section>
@@ -104,6 +104,20 @@
 					<label>Java</label>
 					<div class="progress">
 						<div class="progress-bar bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 pt-lg-0 pt-3 progrs">
+					<label>IOT</label>
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+						</div>
+					</div>
+				</div>
+				<div class="col-lg-4 pt-lg-0 pt-3 progrs">
+					<label>DBMS</label>
+					<div class="progress">
+						<div class="progress-bar  bg-success progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
 						</div>
 					</div>
 				</div>
